--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* padding: 2rem;*/
+  text-align: center; 
+
 }
 
 .App{
-  padding: 4rem;
+  padding: 0;
+  margin: 0;
 }
 
 .logo {
